Refactored the smart contract to use the latest stacks blocktime

--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -5,10 +5,11 @@ authors = []
 telemetry = true
 cache_dir = './.cache'
 requirements = []
+
 [contracts.sBTC-BitDeriv]
 path = 'contracts/sBTC-BitDeriv.clar'
-clarity_version = 3
-epoch = 3.1
+clarity_version = 4
+epoch = "latest"
 [repl.analysis]
 passes = ['check_checker']
 
