--- a/package.json
+++ b/package.json
@@ -13,12 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hirosystems/clarinet-sdk": "^2.3.2",
-    "@stacks/transactions": "^6.12.0",
-    "chokidar-cli": "^3.0.0",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.4",
-    "vitest": "^1.3.1",
-    "vitest-environment-clarinet": "^2.0.0"
+    "@stacks/clarinet-sdk": "^3.10.0",
+    "@stacks/transactions": "^7.3.0",
+    "@types/node": "24.10.0",
+    "chokidar-cli": "3.0.0",
+    "vitest": "^4.0.7",
+    "vitest-environment-clarinet": "3.0.2"
   }
 }
